--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
         <Nav>
             <div class="personal__logo">Mercedes McCann</div>
             <ul class="nav__link--list">
-                <li>
+                <li class="nav__link">
                     <a href="#Languages" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black"
                     >Languages</a>
                 </li>
-                <li>
+                <li class="nav__link">
                     <a href="#projects" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black"
                     >Projects</a>
                 </li>
-                <li>
-                    <a href="" class="
+                <li class="nav__link">
+                    <a href="mailto:mercedesmccann9@gmail.com" class="
                     nav__link--anchor
                     nav__link--anchor-primary"
                     >Contact</a>
@@ -40,7 +40,7 @@
                 <figure class="about-me__picture--mask">
                     <img src="./smallerheadshot8.24.jpg" class="about-me__picture" alt="picture of me">
                 </figure>
-                <h1 class="about-me__info--title">Hello! I'm <span class="text--purple">Mercedes McCann</span>👋.</h1>
+                <h1 class="about-me__info--title">Hello! I'm <span class="text--purple">Mercedes McCann</span>&nbsp;<span class="wave">👋</span>.</h1>
                 <p class="about-me__info--para">I'm a <strong class="text--purple">front end developer</strong> who cares about making websites that work well for everyone. I like turning ideas into real websites that people actually want to use.</p>
                 
                 <div class="about-me__links">
@@ -53,7 +53,7 @@
                       <a href="" class="about-me__link">
                         <i class="far fa-envelope"></i>
                       </a>
-                       <a href="" class="about-me__link">
+                       <a href="./Example Resume.pdf" target="_blank" class="about-me__link">
                         <i class="fas fa-file-pdf"></i>
                        </a>
                 
@@ -183,24 +183,24 @@
             </a>
             <div class="footer__social--list">
                 <a href="https://www.google.com" 
-                class="footer__social--link" 
+                class="footer__social--link 
                 link__hover-effect
-                link__hover-effect--white 
+                link__hover-effect--white" 
                 target="_blank">GitHub</a>
                 <a href="https://www.google.com" 
-                class="footer__social--link" 
+                class="footer__social--link 
                 link__hover-effect
-                link__hover-effect--white 
+                link__hover-effect--white" 
                 target="_blank">LinkedIn</a>
                 <a href="email to: mercedesmccann9@gmail.com" 
-                class="footer__social--link" 
+                class="footer__social--link 
                 link__hover-effect
-                link__hover-effect--white 
+                link__hover-effect--white" 
                 target="_blank">Email</a>
                 <a href="./Example Resume.pdf" 
-                class="footer__social--link" 
+                class="footer__social--link 
                 link__hover-effect
-                link__hover-effect--white 
+                link__hover-effect--white" 
                 target="_blank">Resume</a>
             </div>
             <div class="footer__copyright">Copyright ©2025 Mercedes McCann</div>
